# aitrios-refapp-human-detection

./: .gitignore  README.md  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
backend/: Dockerfile  README.md  docker-compose.dev.yml  pyproject.toml
backend/app/: main.py
backend/app/client/: client_interface.py  online_client_v1.py  online_client_v2.py
backend/app/config/: app_config.py  app_config.yaml
backend/app/data_management/: device_stream.py  human_detection.py
backend/app/data_management/object_detection/: inference_deserialization.py  objectdetection.fbs
backend/app/data_management/object_detection/SmartCamera/: BoundingBox.py  BoundingBox2d.py  GeneralObject.py  ObjectDetectionData.py  ObjectDetectionTop.py
backend/app/routers/: app_config.py  insight.py  processing.py
backend/app/schemas/: app_config.py  common.py  insight.py
backend/app/utils/: timestamp.py
docs/: UI_BE_logic.md  USAGE.md  code-style.md  user_workflow.md
frontend/: README.md
frontend/app/: .env  index.html  package-lock.json  package.json  vite.config.ts
frontend/app/src/: App.css  App.tsx
frontend/app/src/components/: CustomResponsiveLine.tsx  HeaderBar.tsx
frontend/app/src/features/: PrincipalScreen.tsx
frontend/app/src/hooks/: CustomHooks.tsx  EdgeAppConfigurationUpdateHook.tsx  ResetStateHooks.tsx
frontend/app/src/stores/: AppConfigContext.tsx  AppContext.tsx  DeviceDataTimeRangeContext.tsx  DeviceDirectoryContext.tsx  EdgeAppConfigurationContext.tsx  HistoryDataContext.tsx  ImageInferenceContext.tsx  constants.tsx  (+1 more)
(+45 files in other folders)
